# webrtc_source_code

webrtc_aec/: CMakeLists.txt
webrtc_aec/include/absl/base/: attributes.h  nullability.h
webrtc_aec/include/absl/strings/: has_absl_stringify.h  match.h  str_cat.h  string_view.h
webrtc_aec/include/api/: field_trials_view.h  scoped_refptr.h
webrtc_aec/include/api/audio/: audio_processing.h  audio_processing_statistics.h  audio_view.h  echo_control.h
webrtc_aec/include/api/environment/: environment.h
webrtc_aec/include/api/rtc_event_log/: rtc_event_log.h
webrtc_aec/include/api/task_queue/: task_queue_base.h  task_queue_factory.h
webrtc_aec/include/api/units/: timestamp.h
webrtc_aec/include/common_audio/: channel_buffer.h
webrtc_aec/include/common_audio/include/: audio_util.h
webrtc_aec/include/common_audio/resampler/: push_sinc_resampler.h
webrtc_aec/include/modules/audio_processing/: audio_buffer.h  splitting_filter.h
webrtc_aec/include/modules/audio_processing/aec3/: echo_canceller3.h
webrtc_aec/include/rtc_base/: checks.h  cpu_info.h  gtest_prod_util.h  platform_thread_types.h  race_checker.h  string_utils.h  thread_annotations.h
webrtc_aec/include/rtc_base/strings/: string_builder.h
webrtc_aec/include/system_wrappers/include/: clock.h  metrics.h
webrtc_aec/src/: main.cpp  main_base.cpp  main_simple.cpp
webrtc_aec/src/aec3/: aec3_fft.cc  block_processor_metrics.cc  comfort_noise_generator.cc  echo_remover_metrics.cc
webrtc_ns/: CMakeLists.txt  Makefile  README.md  generate_test_wav.py
webrtc_ns/build_clean/: CMakeCache.txt
webrtc_ns/build_fresh/: CMakeCache.txt
webrtc_ns/build_new/: CMakeCache.txt
webrtc_ns/include/webrtc/api/: array_view.h
webrtc_ns/include/webrtc/modules/audio_processing/ns/: fast_math.h  noise_estimator.h  noise_suppressor.h  ns_common.h  (+7 more)
webrtc_ns/src/: main.cpp
webrtc_ns/src/ns/: noise_estimator.cc  noise_suppressor.cc  ns_fft.cc  quantile_noise_estimator.cc  signal_model_estimator.cc  speech_probability_estimator.cc  suppression_params.cc  wiener_filter.cc
